--- a/refs.bib
+++ b/refs.bib
@@ -82,6 +82,18 @@
 	journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences}
 }
 
+@article{Medford_2017,
+	doi = {10.1021/acscatal.7b00439},
+	url = {https://doi.org/10.1021%2Facscatal.7b00439},
+	year = 2017,
+	month = {Mar},
+	publisher = {American Chemical Society ({ACS})},
+	pages = {2624--2643},
+	author = {Andrew J. Medford and Marta C. Hatzell},
+	title = {Photon-Driven Nitrogen Fixation: Current Progress, Thermodynamic Considerations, and Future Outlook},
+	journal = {{ACS} Catalysis}
+}
+
 @article{Vicente_2017,
 	doi = {10.1073/pnas.1701560114},
 	url = {https://doi.org/10.1073%2Fpnas.1701560114},
@@ -101,4 +113,64 @@
   Author                   = {{FAO}, {IFAD}, {UNICEF}, {WFP} and {WHO},
   Year                     = {2017},
   Location                 = {Rome, Italy},
+}
+
+@Report{FAO_2014,
+  Title                    = {The State of Food and Agriculture: Innovation in family farming},
+  Author                   = {{FAO}},
+  Year                     = {2014},
+  Location                 = {Rome, Italy},
+}
+
+@article{McArthur_2017,
+	doi = {10.1016/j.jdeveco.2017.02.007},
+	url = {https://doi.org/10.1016%2Fj.jdeveco.2017.02.007},
+	year = 2017,
+	month = {jul},
+	publisher = {Elsevier {BV}},
+	volume = {127},
+	pages = {133--152},
+	author = {John W. McArthur and Gordon C. McCord},
+	title = {Fertilizing growth: Agricultural inputs and their effects in economic development},
+	journal = {Journal of Development Economics}
+}
+
+@article{Schneider_2003,
+	doi = {10.1007/bf02686198},
+	url = {https://doi.org/10.1007%2Fbf02686198},
+	year = 2003,
+	month = {sep},
+	publisher = {Springer Nature},
+	volume = {38},
+	number = {3},
+	pages = {32--56},
+	author = {Aaron Schneider},
+	title = {Decentralization: Conceptualization and measurement},
+	journal = {Studies in Comparative International Development}
+}
+
+@article{Lowder_2016,
+	doi = {10.1016/j.worlddev.2015.10.041},
+	url = {https://doi.org/10.1016%2Fj.worlddev.2015.10.041},
+	year = 2016,
+	month = {nov},
+	publisher = {Elsevier {BV}},
+	volume = {87},
+	pages = {16--29},
+	author = {Sarah K. Lowder and Jakob Skoet and Terri Raney},
+	title = {The Number, Size, and Distribution of Farms, Smallholder Farms, and Family Farms Worldwide},
+	journal = {World Development}
+}
+
+@article{Weyrauch_2016,
+	doi = {10.1186/s40669-016-0005-y},
+	url = {https://doi.org/10.1186%2Fs40669-016-0005-y},
+	year = 2016,
+	month = {dec},
+	publisher = {Springer Nature},
+	volume = {2},
+	number = {1},
+	author = {Timo Weyrauch and Cornelius Herstatt},
+	title = {What is frugal innovation? Three defining criteria},
+	journal = {Journal of Frugal Innovation}
 }
