--- a/refs.bib
+++ b/refs.bib
@@ -67,6 +67,20 @@
 	Volume = {483},
 	Year = {2012},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1038/483525a}}
+	
+	@report{Maung_2012,
+	doi = {},
+	url = {https://ageconsearch.umn.edu/bitstream/133410/2/Department-APUC%20Report.pdf},
+	year = 2012,
+	month = {september},
+	publisher = {Department of Agribusiness and Applied Economics},
+	volume = {},
+	number = {},
+	pages = {1-33},
+	author = {Thien Maung and David Ripplinger and Greg McKee and David Saxowsky},
+	title = {Economics of Using Flared vs. Conventional Natural Gas to Produce Nitrogen Fertilizer: A Feasibility Analysis},
+	journal = {Agribusiness and Applied Economics}
+}
     
 @article{MacKay_2013,
 	doi = {10.1098/rsta.2011.0431},
@@ -173,4 +187,143 @@
 	author = {Timo Weyrauch and Cornelius Herstatt},
 	title = {What is frugal innovation? Three defining criteria},
 	journal = {Journal of Frugal Innovation}
+}
+
+@article{Davis_2017,
+	doi = {10.1177/0734904117715649},
+	url = {https://doi.org/10.1177%2F0734904117715649},
+	year = 2017,
+	month = {sep},
+	publisher = {{SAGE} Publications},
+	volume = {35},
+	number = {5},
+	pages = {379--395},
+	author = {Scott Davis and Tom DeBold and Claudio Marsegan},
+	title = {Investigation findings and lessons learned in the west fertilizer explosion},
+	journal = {Journal of Fire Sciences}
+}
+
+@article{Marlair_2005,
+	doi = {10.1016/j.jhazmat.2005.03.028},
+	url = {https://doi.org/10.1016%2Fj.jhazmat.2005.03.028},
+	year = 2005,
+	month = {aug},
+	publisher = {Elsevier {BV}},
+	volume = {123},
+	number = {1-3},
+	pages = {13--28},
+	author = {Guy Marlair and Marie-Astrid Kordek},
+	title = {Safety and security issues relating to low capacity storage of {AN}-based fertilizers},
+	journal = {Journal of Hazardous Materials}
+}
+
+@article{Kondratenko2013,
+abstract = {This review highlights recent developments and future perspectives in carbon dioxide usage for the sustainable production of energy and chemicals and to reduce global warming. We discuss the heterogeneously catalysed hydrogenation, as well as the photocatalytic and electrocatalytic conversion of CO2 to hydrocarbons or oxygenates. Various sources of hydrogen are also reviewed in terms of their CO2 neutrality. Technologies have been developed for large-scale CO2 hydrogenation to methanol or methane. Their industrial application is, however, limited by the high price of renewable hydrogen and the availability of large-volume sources of pure CO2. With regard to the direct electrocatalytic reduction of CO2 to value-added chemicals, substantial advances in electrodes, electrolyte, and reactor design are still required to permit the development of commercial processes. Therefore, in this review particular attention is paid to (i) the design of metal electrodes to improve their performance and (ii) recent developments of alternative approaches such as the application of ionic liquids as electrolytes and of microorganisms as co-catalysts. The most significant improvements both in catalyst and reactor design are needed for the photocatalytic functionalisation of CO2 to become a viable technology that can help in the usage of CO2 as a feedstock for the production of energy and chemicals. Apart from technological aspects and catalytic performance, we also discuss fundamental strategies for the rational design of materials for effective transformations of CO2 to value-added chemicals with the help of H2, electricity and/or light.},
+author = {Kondratenko, Evgenii V. and Mul, Guido and Baltrusaitis, Jonas and Larraz{\'{a}}bal, Gast{\'{o}}n O. and P{\'{e}}rez-Ram{\'{i}}rez, Javier},
+doi = {10.1039/c3ee41272e},
+file = {:home/benjamin/Downloads/C3EE41272E.pdf:pdf},
+isbn = {1754-5692$\backslash$r1754-5706},
+issn = {1754-5692},
+journal = {Energy {\&} Environmental Science},
+number = {11},
+pages = {3112},
+title = {{Status and perspectives of CO2 conversion into fuels and chemicals by catalytic, photocatalytic and electrocatalytic processes}},
+url = {http://xlink.rsc.org/?DOI=c3ee41272e},
+volume = {6},
+year = {2013}
+}
+
+@article{Kyriakou_2017,
+	doi = {10.1016/j.cattod.2016.06.014},
+	url = {https://doi.org/10.1016%2Fj.cattod.2016.06.014},
+	year = 2017,
+	month = {may},
+	publisher = {Elsevier {BV}},
+	volume = {286},
+	pages = {2--13},
+	author = {V. Kyriakou and I. Garagounis and E. Vasileiou and A. Vourros and M. Stoukides},
+	title = {Progress in the Electrochemical Synthesis of Ammonia},
+	journal = {Catalysis Today}
+}
+
+@article{Wanzala2013,
+abstract = {The purpose of fertilisation is the optimisation of plant nutrition and the maintenance of the fertility of soils. Whilst they are essential to plant nutrition, fertilisers nevertheless make a substantial contribution to the environmental footprint of crop production. Accordingly, the optimisation of fertilisation performance is both a key issue and a lever for environmental improvement. While good nitrogen fertilisation is already well-known and familiar to farmers, environmental differentiation between the main forms of nitrogen fertiliser is a lever for improvement which has yet to be analysed. GPN and InVivo AgroSolutions therefore decided to work on a comparative Life Cycle Analysis of the three main forms of fertiliser used in France, in order to obtain a reliable and objective comparison of their respective environmental impacts on large-scale crop cultivation. This analysis has been validated by a critical review, which was conducted by in-house experts from both companies and supervised by the BioIntelligence Service. The conclusions of this analysis reflect the superior environmental performance of ammonium nitrate produced within the European Union, in comparison with urea or nitrogen solution of non-European origin, in terms of all calculated indicators. In the interests of clarity, only the three of these indicators (potential contribution to climate change, consumption of non-renewable primary energy, potential for acidification) have been considered for communication purposes, while the remaining indicators will provide a means of guarding against any transfers of pollution. The superiority of ammonium nitrate can be explained by the following: • optimised industrial processes associated with stronger environmental pressures in Europe; • variable emissions of pollutant molecules in the field associated with different chemical composition; • differences in agronomic efficiency.},
+author = {Wanzala, Maria and Groot, Rob},
+file = {:home/benjamin/Downloads/fertilizer-market-development.pdf:pdf},
+isbn = {9780853103646},
+journal = {Conference International Fertiliser Society},
+keywords = {Life Cycle Analysis,ammonium nitrate,environmental performance,nitrogen fertilisers},
+number = {May},
+pages = {12-14},
+title = {{Fertilizer market development in sub-saharian Africa}},
+volume = {4},
+year = {2013}
+}
+
+@article{Bur_n_2017,
+	doi = {10.1093/femsle/fnx274},
+	url = {https://doi.org/10.1093%2Ffemsle%2Ffnx274},
+	year = 2017,
+	month = {dec},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {365},
+	number = {2},
+	author = {Stefan Bur{\'{e}}n and Luis M Rubio},
+	title = {State of the art in eukaryotic nitrogenase engineering},
+	journal = {{FEMS} Microbiology Letters}
+}
+
+@article{MacLeod_2013,
+	doi = {10.1002/chin.201334195},
+	url = {https://doi.org/10.1002%2Fchin.201334195},
+	year = 2013,
+	month = {aug},
+	publisher = {Wiley},
+	volume = {44},
+	number = {34},
+	pages = {no--no},
+	author = {K. Cory MacLeod and Patrick L. Holland},
+	title = {{ChemInform} Abstract: Recent Developments in the Homogeneous Reduction of Dinitrogen by Molybdenum and Iron},
+	journal = {{ChemInform}}
+}
+
+@article{Foster2018,
+abstract = {The production of synthetic ammonia remains dependent on the energy- and capital-intensive Haber–Bosch process. Extensive research in molecular catalysis has demonstrated ammonia production from dinitrogen, albeit at low production rates. Mechanistic understanding of dinitrogen reduction to ammonia continues to be delineated through study of molecular catalyst structure, as well as through understanding the naturally occurring nitrogenase enzyme. The transition to Haber–Bosch alternatives through robust, heterogeneous catalyst surfaces remains an unsolved research challenge. Catalysts for electrochemical reduction of dinitrogen to ammonia are a specific focus of research, due to the potential to compete with the Haber–Bosch process and reduce associated carbon dioxide emissions. However, limited progress has been made to date, as most electrocatalyst surfaces lack specificity towards nitrogen fixation. In this Review, we discuss the progress of the field in developing a mechanistic understanding of nitrogenase-promoted and molecular catalyst-promoted ammonia synthesis and provide a review of the state of the art and scientific needs for heterogeneous electrocatalysts.},
+author = {Foster, Shelby L. and Bakovic, Sergio I.Perez and Duda, Royce D. and Maheshwari, Sharad and Milton, Ross D. and Minteer, Shelley D. and Janik, Michael J. and Renner, Julie N. and Greenlee, Lauren F.},
+doi = {10.1038/s41929-018-0092-7},
+file = {:home/benjamin/Downloads/Greenlee{\_}NatureCatalysis{\_}N2reductino.pdf:pdf},
+issn = {25201158},
+journal = {Nature Catalysis},
+number = {7},
+pages = {490--500},
+title = {{Catalysts for nitrogen reduction to ammonia}},
+volume = {1},
+year = {2018}
+}
+
+@article{McDaniel_2010,
+	doi = {10.1039/c0dt00454e},
+	url = {https://doi.org/10.1039%2Fc0dt00454e},
+	year = 2010,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {39},
+	number = {42},
+	pages = {10021},
+	author = {Neal D. McDaniel and Stefan Bernhard},
+	title = {Solar fuels: thermodynamics, candidates, tactics, and figures of merit},
+	journal = {Dalton Transactions}
+}
+
+@article{Highfield_2015,
+	doi = {10.3390/molecules20046739},
+	url = {https://doi.org/10.3390%2Fmolecules20046739},
+	year = 2015,
+	month = {apr},
+	publisher = {{MDPI} {AG}},
+	volume = {20},
+	number = {4},
+	pages = {6739--6793},
+	author = {James Highfield},
+	title = {Advances and Recent Trends in Heterogeneous  Photo(Electro)-Catalysis for Solar Fuels and Chemicals},
+	journal = {Molecules}
 }
