--- a/SI.tex
+++ b/SI.tex
@@ -32,12 +32,32 @@
 \newpage
 
 \section{Calculations}
+The concentration of NH$_3$ at which it can be detected through the human sense of smell
+\begin{align*}
+\mathrm{
+& 50ppm \: NH_3 \times \frac{10^{-6}}{ppm} \times 101.325kPa \times \frac{1000 \: Pa}{kPa} \times 0.59 \frac{mol}{m^3Pa} \times \frac{m^3M}{1000mol} \times \\
+& \frac{mM}{10^{-3} M} = 2.98mM \: NH_3 \approx 3mM \: NH_3
+}
+\end{align*}
+
+The approximate per hectre nitrogen contributed to croplands by biological nitrogen fixation. total biological nitrogen fixation is estimated at 33 Tg N/yr by Smil\cite{Smil_1999_2} and cropland area estimated by FAOSTAT. All values for 1999
 \begin{equation}
 \mathrm{
-50ppm \: NH_3 \times \frac{10^{-3}}{ppm} \times 101.325kPa \times 0.59 \frac{mol}{m^3Pa} \times \frac{m^3M}{1000mol} \times \frac{10^{-3} mM}{M} = 2.98mM \: NH_3 \approx 3mM \: NH_3
+33 \frac{Tg}{yr} \: \times \frac{1}{1540687.59 kha} \: \times \frac{kha}{1000 ha} \: \times \frac{10^{9} kg}{Tg} = 21.4 \frac{kg}{ha\:yr}
 }
 \end{equation}
 
+Ammount of activated carbon needed to fertilizer one hectare of land for one year. Based off 50kg N/ha yr and highest adsorption capacity of NH$_3$ on activated carbon found in the literature (16mg NH$_3$/g C)\cite{Gon_alves_2011}.
+\begin{equation}
+\mathrm{ 50 \frac{kg \: N}{ha \: yr} \: \times \frac{g \: C}{16 \: mg \: NH_3} \: \times \frac{17g\:NH_3}{14g\:N}  \times \: 1000 \frac{mg}{g} = 3,795 \frac{kg\:C}{ha \: yr}
+}
+\end{equation}
+
+The volume density of NH$_3$ in maximally saturated activated carbon. Highest adsorption capacity of NH$_3$ on activated carbon found in the literature (16mg NH$_3$/g C)\cite{Gon_alves_2011}. The density of activated carbon was assumed to be 400 kg/m$^3$
+\begin{equation}
+\mathrm{\frac{16 \: mg \: NH_3}{g \: C} \: \times \frac{0.4g \:C}{cm^3} \: \times \frac{1000 cm^3}{L}  \times \: \frac{mmol \: NH_3}{17 mg \: NH_3} = 376 \frac{mmol\:NH_3}{L}
+}
+\end{equation}
 
 %\newpage
 
