--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,9 @@
 %% $Id: elsarticle-template-1-num.tex 149 2009-10-08 05:01:15Z rishi $
 %% $URL: http://lenova.river-valley.com/svn/elsbst/trunk/elsarticle-template-1-num.tex $
 %%
-\documentclass[preprint,12pt]{elsarticle}
+%%\documentclass[final,1p,times,twocolumn]{elsarticle}
+\documentclass[preprint,review,12pt]{elsarticle}
+\usepackage[a4paper, total={6in, 8in}]{geometry}
 \usepackage{todonotes}
 \usepackage{wrapfig}
 %% Use the option review to obtain double line spacing
