--- a/refs.bib
+++ b/refs.bib
@@ -14,7 +14,7 @@
 
 @article{Schloegl_2003,
 	doi = {10.1002/anie.200301553},
-	url = {https://doi.org/10.1002%2Fanie.200301553},
+	url = {https://doi.org/10.1002\%2Fanie.200301553},
 	year = 2003,
 	month = {may},
 	publisher = {Wiley},
@@ -385,6 +385,19 @@ pages = {647--662},
 title = {{Nitrogen in crop production : An account of global flows adds recycled in organic up by harvested and Quantification of N losses from crop to 26-60}},
 volume = {13},
 year = {1999}
+}
+
+
+@article{Skulason_2012,
+	doi = {10.1039/c1cp22271f},
+	year = 2012,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {14},
+	number = {3},
+	pages = {1235--1245},
+	author = {Egill Sk{\'{u}}lason and Thomas Bligaard and Sigr{\'{\i}}dur Gudmundsd{\'{o}}ttir and Felix Studt and Jan Rossmeisl and Frank Abild-Pedersen and Tejs Vegge and Hannes J{\'{o}}nsson and Jens K. N{\o}rskov},
+	title = {A theoretical evaluation of possible transition metal electro-catalysts for N2reduction},
+	journal = {Phys. Chem. Chem. Phys.}
 }
 
 @article{Liu2018,
@@ -814,6 +827,31 @@ volume = {5},
 year = {2007}
 }
 
+@inproceedings{Meyer_2016,
+	doi = {10.2514/6.2016-5586},
+	url = {https://doi.org/10.2514%2F6.2016-5586},
+	year = 2016,
+	month = {sep},
+	publisher = {American Institute of Aeronautics and Astronautics},
+	author = {Bryce L. Meyer and Nicholas S. Shepherd},
+	title = {Nutrient Balance and Nitrogen Cycling In a Multistage, Multispecies Space Farm},
+	booktitle = {{AIAA} {SPACE} 2016}
+}
+
+@article{Lehmann_2007,
+	doi = {10.1038/447143a},
+	url = {https://doi.org/10.1038%2F447143a},
+	year = 2007,
+	month = {may},
+	publisher = {Springer Nature},
+	volume = {447},
+	number = {7141},
+	pages = {143--144},
+	author = {Johannes Lehmann},
+	title = {A handful of carbon},
+	journal = {Nature}
+}
+
 @article{McHenry2009,
 abstract = {Reducing the vulnerability of agriculture to climate change while increasing primary productivity requires mitigation and adaptation activities to generate profitable co-benefits to farms. The conversion of woody-wastes by pyrolysis to produce bio-char (biologically derived charcoal) is one potential option that can enhance natural rates of carbon sequestration in soils, reduce farm waste, and substitute renewable energy sources for fossil-derived fuel inputs. Bio-char has the potential to increase conventional agricultural productivity and enhance the ability of farmers to participate in carbon markets beyond traditional approach by directly applying carbon into soil. This paper provides an overview of the pyrolysis process and products and quantifies the amount of renewable energy generation and net carbon sequestration possible when using farm bio-waste to produce bio-char as a primary product. While this research provides approximate bio-char and energy production yields, costs, uses and risks, there is a need for additional research on the value of bio-char in conventional crop yields and adaptation and mitigation options. {\textcopyright} 2008 Elsevier B.V. All rights reserved.},
 author = {McHenry, Mark P.},
@@ -1098,3 +1136,66 @@ year = {2000}
   year={2000},
   publisher={Royal Society of Chemistry}
 }
+
+@article{Yousaf2017,
+abstract = {Incredible accomplishments have been achieved in agricultural production in China, but many demanding challenges for ensuring food security and environmental sustainability remain. Field experiments were conducted from 2011–2013 at three different sites, including Honghu, Shayang, and Jingzhou in China, to determine the effects of fertilization on enhancing crop productivity and indigenous nutrient-supplying capacity (INuS) in a rice (Oryza sativa L.)-rapeseed (Brassica napus L.) rotation. Four mineral fertilizer treatments (NPK, NP, NK and PK) were applied in a randomized complete block design with three replicates. Crop yields were increased by 19–41{\%} (rice) and 61–76{\%} (rapeseed) during the two years of rice-rapeseed rotation under NPK fertilization compared to PK fertilization across the study sites. Yield responses to fertilization were ranked NPK {\textgreater} NP {\textgreater} NK {\textgreater} PK, illustrating that N deficiency was the most limiting condition in a rice-rapeseed rotation, followed by P and K deficiencies. The highest and lowest N, P and K accumulations were observed under NPK and PK fertilization, respectively. The INuS of the soil decreased to a significant extent and affected rice-rapeseed rotation productivity at each site under NP, NK, and PK fertilization when compared to NPK. Based on the study results, a balanced nutrient application using NPK fertilization is a key management strategy for enhancing rice-rapeseed productivity and environmental safety.},
+author = {Yousaf, Muhammad and Li, Jifu and Lu, Jianwei and Ren, Tao and Cong, Rihuan and Fahad, Shah and Li, Xiaokun},
+doi = {10.1038/s41598-017-01412-0},
+file = {:home/benjamin/Downloads/s41598-017-01412-0.pdf:pdf},
+isbn = {2045-2322},
+issn = {20452322},
+journal = {Scientific Reports},
+number = {1},
+pages = {1--9},
+pmid = {18792846},
+publisher = {Springer US},
+title = {{Effects of fertilization on crop production and nutrient-supplying capacity under rice-oilseed rape rotation system}},
+url = {http://dx.doi.org/10.1038/s41598-017-01412-0},
+volume = {7},
+year = {2017}
+}
+
+@article{VanderVelde2014,
+abstract = {The impact of soil nutrient depletion on crop production has been known for decades, but robust assessments of the impact of increasingly unbalanced nitrogen (N) and phosphorus (P) application rates on crop production are lacking. Here, we use crop response functions based on 741 FAO maize crop trials and EPIC crop modeling across Africa to examine maize yield deficits resulting from unbalanced N : P applications under low, medium, and high input scenarios, for past (1975), current, and future N : P mass ratios of respectively, 1 : 0.29, 1 : 0.15, and 1 : 0.05. At low N inputs (10 kg ha(-1)), current yield deficits amount to 10{\%} but will increase up to 27{\%} under the assumed future N : P ratio, while at medium N inputs (50 kg N ha(-1)), future yield losses could amount to over 40{\%}. The EPIC crop model was then used to simulate maize yields across Africa. The model results showed relative median future yield reductions at low N inputs of 40{\%}, and 50{\%} at medium and high inputs, albeit with large spatial variability. Dominant low-quality soils such as Ferralsols, which are strongly adsorbing P, and Arenosols with a low nutrient retention capacity, are associated with a strong yield decline, although Arenosols show very variable crop yield losses at low inputs. Optimal N : P ratios, i.e. those where the lowest amount of applied P produces the highest yield (given N input) where calculated with EPIC to be as low as 1 : 0.5. Finally, we estimated the additional P required given current N inputs, and given N inputs that would allow Africa to close yield gaps (ca. 70{\%}). At current N inputs, P consumption would have to increase 2.3-fold to be optimal, and to increase 11.7-fold to close yield gaps. The P demand to overcome these yield deficits would provide a significant additional pressure on current global extraction of P resources.},
+author = {{Van der Velde}, Marijn and Folberth, Christian and Balkovi{\v{c}}, Juraj and Ciais, Philippe and Fritz, Steffen and Janssens, Ivan A. and Obersteiner, Michael and See, Linda and Skalsk{\'{y}}, Rastislav and Xiong, Wei and Pe{\~{n}}uelas, Josep},
+doi = {10.1111/gcb.12481},
+file = {:home/benjamin/Downloads/Velde{\_}et{\_}al-2014-Global{\_}Change{\_}Biology.pdf:pdf},
+isbn = {1365-2486},
+issn = {13541013},
+journal = {Global Change Biology},
+keywords = {Crop production,Fertilizer,Food security,Nutrients,Phosphate rock,Resource use,Stoichiometry},
+number = {4},
+pages = {1278--1288},
+pmid = {24470387},
+title = {{African crop yield reductions due to increasingly unbalanced Nitrogen and Phosphorus consumption}},
+volume = {20},
+year = {2014}
+}
+
+@inbook{Ullmann_amm_2006,
+author = {Appl, Max},
+publisher = {American Cancer Society},
+isbn = {9783527306732},
+title = {Ammonia},
+booktitle = {Ullmann's Encyclopedia of Industrial Chemistry},
+chapter = {},
+pages = {},
+doi = {10.1002/14356007.a02_143.pub2},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/14356007.a02_143.pub2},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/14356007.a02_143.pub2},
+year = {2006},
+abstract = {Abstract The article contains sections titled: 1. Occurrence and History 2. Physical Properties 3. Chemical Properties 4. Production 4.1. Historical Development 4.2. Thermodynamic Data 4.3. Ammonia Synthesis Reaction 4.3.1. General Aspects 4.3.2. Catalyst Surface and Reaction Mechanism 4.3.3. Kinetics 4.4. Catalysts 4.4.1. Classical Iron Catalysts 4.4.1.1. Composition 4.4.1.2. Particle Size and Shape 4.4.1.3. Catalyst-Precursor Manufacture 4.4.1.4. Catalyst Reduction 4.4.1.5. Catalyst Poisons 4.4.2. Other Catalysts 4.4.2.1. General Aspects 4.4.2.2. Metals with Catalytic Potential 4.4.2.3. Commercial Ruthenium Catalysts 4.5. Process Steps of Ammonia Production 4.5.1. Synthesis Gas Production 4.5.1.1. Feedstock Pretreatment and Raw Gas Production 4.5.1.2. Carbon Monoxide Shift Conversion 4.5.1.3. Gas Purification 4.5.2. Compression 4.5.3. Ammonia Synthesis 4.5.3.1. Synthesis Loop Configurations 4.5.3.2. Formation of Ammonia in the Converter 4.5.3.3. Waste-Heat Utilization and Cooling 4.5.3.4. Ammonia Recovery from the Ammonia Synthesis Loop 4.5.3.5. Inert-Gas and Purge-Gas Management 4.5.3.6. Influence of Pressure and Other Variables of the Synthesis Loop 4.5.3.7. Example of an Industrial Synthesis Loop 4.6. Complete Ammonia Production Plants 4.6.1. Steam Reforming Ammonia Plants 4.6.1.1. The Basic Concept of Single-Train Plants 4.6.1.2. Further Developments 4.6.1.3. Minimum Energy Requirement for Steam Reforming Processes 4.6.1.4. Commercial Steam Reforming Ammonia Processes 4.6.1.4.1. Advanced Conventional Processes 4.6.1.4.2. Processes with Reduced Primary Reformer Firing 4.6.1.4.3. Processes Without a Fired Primary Reformer (Exchanger Reformer) 4.6.1.4.4. Processes Without a Secondary Reformer (Nitrogen from Air Separation) 4.6.2. Ammonia Plants based on Partial Oxidation 4.6.2.1. Ammonia Plants Based on Heavy Hydrocarbons 4.6.2.2. Ammonia Plants Using Coal as Feedstock 4.6.3. Waste-Heat Boilers 4.6.4. Single-Train Capacity – Mega Ammonia Plants 4.7. Modernization of Older Plants (Revamping) 4.8. Material Considerations for Equipment Fabrication 5. Storage and Shipping 5.1. Storage 5.1.1. Pressure Storage 5.1.2. Low-Temperature Storage 5.1.3. Underground Storage 5.1.4. Storage of Aqueous Ammonia 5.2. Transportation 6. Quality Specifications and Analysis 7. Environmental, Safety, and Health Aspects 7.1. Environmental Aspects of Ammonia Production and Handling 7.2. Safety Features 7.3. Health Aspects and Toxicity of Ammonia 8. Uses 9. Economic Aspects 10. Future Perspectives}
+}
+
+@TECHREPORT{Foster_2011},
+title = {Congo, Democratic Republic of - The Democratic Republic of Congo's infrastructure: a continental perspective},
+author = {Foster, Vivien and Benitez, Daniel Alberto},
+year = {2011},
+institution = {The World Bank},
+type = {Policy Research Working Paper Series},
+number = {5602},
+abstract = {The Democratic Republic of Congo (DRC) faces possibly the most daunting infrastructure challenge on the African continent. Conflict has seriously damaged most infrastructure networks. Vast geography, low population density, extensive forestlands, and criss-crossing rivers complicate the development of new networks. Progress has been made since the return of peace in 2003. A privately funded GSM network now provides mobile telephone signals to two-thirds of the population. External funding has been secured to rebuild the country's road network, and domestic air traffic has grown. Modest investments could harness inland waterways for low-cost transport. Much more substantial investments in hydropower would enable the DRC to meet its own energy demands cheaply while exporting vast quantities of power. One of the country's most immediate infrastructure challenges is to reform the national power utility and increase power generation and delivery. Capacity must increase by 35 percent over the period 2006-15 to meet domestic demand. The dilapidated condition of both road and rail infrastructure presents another challenge. To meet the target defined in the report, investment in the country's infrastructure must increase from $700 million to $5.3 billion per year over the next decade, a staggering 75 percent of 2006 GDP. New infrastructure technologies, the elimination of inefficiencies, and cross-border finance (for hydropower development) could cut the annual funding gap in half. Recently, the country secured \$4 billion in external finance commitments for infrastructure, enabling increases in budget allocations for public investment.},
+keywords = {Transport Economics Policy&Planning; Infrastructure Economics; Public Sector Economics; Banks&Banking Reform; Energy Production and Transportation},
+url = {https://EconPapers.repec.org/RePEc:wbk:wbrwps:5602}
+}
+
